feat: Se termina la definición del contrato para el API de proyectos. (Fase 1)
PENDIENTE: Desarrollo de lógica asociada al API
