# docs/swagger.json
@@ -89,6 +89,12 @@
                             "type": "string"
                         }
                     },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
                     "422": {
                         "description": "Unprocessable Entity",
                         "schema": {
@@ -104,16 +110,16 @@
                 }
             }
         },
-        "/api/v1/project/transactions/{id}": {
+        "/api/v1/project/logs/{id}": {
             "get": {
-                "description": "read transactions associated to a project",
+                "description": "read logs associated to a project",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "project"
                 ],
-                "summary": "Read transactions by project",
+                "summary": "Read logs by project",
                 "parameters": [
                     {
                         "type": "string",
@@ -136,7 +142,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/model.ReadTransactionResponse"
+                                "$ref": "#/definitions/model.ReadLogsResponse"
                             }
                         }
                     },
@@ -195,7 +201,10 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
                     },
                     "400": {
                         "description": "Bad Request",
@@ -318,6 +327,12 @@
                             "$ref": "#/definitions/api-your-accounts_user_infrastructure_model.CreateResponse"
                         }
                     },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
                     "409": {
                         "description": "Conflict",
                         "schema": {
@@ -368,6 +383,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/model.AuthResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
                         }
                     },
                     "401": {
@@ -454,6 +475,7 @@
         "api-your-accounts_project_infrastructure_model.CreateRequest": {
             "type": "object",
             "required": [
+                "name",
                 "type",
                 "userId"
             ],
@@ -461,6 +483,10 @@
                 "cloneId": {
                     "type": "integer",
                     "minimum": 1
+                },
+                "name": {
+                    "type": "string",
+                    "maxLength": 20
                 },
                 "type": {
                     "enum": [
@@ -553,6 +579,20 @@
                 }
             }
         },
+        "model.ReadLogsResponse": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
         "model.ReadResponse": {
             "type": "object",
             "properties": {
@@ -564,20 +604,6 @@
                 },
                 "type": {
                     "$ref": "#/definitions/domain.ProjectType"
-                }
-            }
-        },
-        "model.ReadTransactionResponse": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
                 }
             }
         },
