# project/infrastructure/handler/handlers.go
@@ -4,11 +4,14 @@ import (
 	"api-your-accounts/project/application"
 	"api-your-accounts/project/domain"
 	"api-your-accounts/project/infrastructure/model"
+	"api-your-accounts/shared/infrastructure/db"
+	"api-your-accounts/shared/infrastructure/db/persistent"
 	"api-your-accounts/shared/infrastructure/validation"
+	"errors"
 	"log"
-	"time"
 
 	"github.com/gofiber/fiber/v2"
+	"gorm.io/gorm"
 )
 
 type controller struct {
@@ -27,6 +30,7 @@ type controller struct {
 //	@Success		201					{object}	model.CreateResponse
 //	@Failure		400					{string}	string
 //	@Failure		401					{string}	string
+//	@Failure		404					{string}	string
 //	@Failure		422					{string}	string
 //	@Failure		500					{string}	string
 //	@Router			/api/v1/project/	[post]
@@ -41,7 +45,19 @@ func (ctrl *controller) create(c *fiber.Ctx) error {
 		UserId: request.UserId,
 		Type:   request.Type,
 	}
-	result, err := ctrl.app.Create(c.UserContext(), project)
+
+	var result *domain.Project
+	var err error
+	if request.CloneId == nil {
+		result, err = ctrl.app.Create(c.UserContext(), project)
+	} else {
+		result, err = ctrl.app.Clone(c.UserContext(), project, *request.CloneId)
+		if errors.Is(err, gorm.ErrRecordNotFound) {
+			log.Printf("Clone ID %d not found\n", *request.CloneId)
+			return fiber.NewError(fiber.StatusNotFound, "Error creating project. Clone ID not found")
+		}
+	}
+
 	if err != nil {
 		log.Println("Error creating project:", err)
 		return fiber.NewError(fiber.StatusInternalServerError, "Error creating project")
@@ -67,41 +83,67 @@ func (ctrl *controller) create(c *fiber.Ctx) error {
 //	@Failure		500						{string}	string
 //	@Router			/api/v1/project/{user}	[get]
 func (ctrl *controller) readByUser(c *fiber.Ctx) error {
-	log.Println(c.Params("user"))
+	userId, err := c.ParamsInt("user")
+	if err != nil {
+		log.Println("Error getting param 'user':", err)
+		return fiber.ErrBadRequest
+	}
 
-	return c.JSON([]model.ReadResponse{
-		{
-			ID:   uint(1),
-			Name: "Test",
-			Type: domain.Budget,
-		},
-	})
+	projects, err := ctrl.app.FindByUser(c.UserContext(), uint(userId))
+	if err != nil {
+		log.Println("Error reading projects by user:", err)
+		return fiber.NewError(fiber.StatusInternalServerError, "Error reading projects by user")
+	}
+
+	response := []model.ReadResponse{}
+	for _, project := range projects {
+		response = append(response, model.ReadResponse{
+			ID:   project.ID,
+			Name: project.Name,
+			Type: project.Type,
+		})
+	}
+
+	return c.JSON(response)
 }
 
 // ProjectReadTransactionsHandler godoc
 //
-//	@Summary		Read transactions by project
-//	@Description	read transactions associated to a project
+//	@Summary		Read logs by project
+//	@Description	read logs associated to a project
 //	@Tags			project
 //	@Produce		json
-//	@Param			Authorization						header		string	true	"Access token"
-//	@Param			id									path		uint	true	"Project ID"
-//	@Success		200									{array}		model.ReadTransactionResponse
-//	@Failure		400									{string}	string
-//	@Failure		401									{string}	string
-//	@Failure		404									{string}	string
-//	@Failure		500									{string}	string
-//	@Router			/api/v1/project/transactions/{id}	[get]
-func (ctrl *controller) readTransactions(c *fiber.Ctx) error {
-	log.Println(c.Params("id"))
+//	@Param			Authorization				header		string	true	"Access token"
+//	@Param			id							path		uint	true	"Project ID"
+//	@Success		200							{array}		model.ReadLogsResponse
+//	@Failure		400							{string}	string
+//	@Failure		401							{string}	string
+//	@Failure		404							{string}	string
+//	@Failure		500							{string}	string
+//	@Router			/api/v1/project/logs/{id}	[get]
+func (ctrl *controller) readLogs(c *fiber.Ctx) error {
+	projectId, err := c.ParamsInt("id")
+	if err != nil {
+		log.Println("Error getting param 'id':", err)
+		return fiber.ErrBadRequest
+	}
 
-	return c.JSON([]model.ReadTransactionResponse{
-		{
-			ID:          1,
-			Description: "Test",
-			CreatedAt:   time.Now(),
-		},
-	})
+	logs, err := ctrl.app.FindLogsByProject(c.UserContext(), uint(projectId))
+	if err != nil {
+		log.Println("Error reading logs by project:", err)
+		return fiber.NewError(fiber.StatusInternalServerError, "Error reading logs by project")
+	}
+
+	response := []model.ReadLogsResponse{}
+	for _, log := range logs {
+		response = append(response, model.ReadLogsResponse{
+			ID:          log.ID,
+			Description: log.Description,
+			CreatedAt:   log.CreatedAt,
+		})
+	}
+
+	return c.JSON(response)
 }
 
 // ProjectDeleteHandler godoc
@@ -110,28 +152,39 @@ func (ctrl *controller) readTransactions(c *fiber.Ctx) error {
 //	@Description	Delete an project by ID
 //	@Tags			project
 //	@Produce		json
-//	@Param			Authorization	header	string	true	"Access token"
-//	@Param			id				path	uint	true	"Project ID"
-//	@Success		200
+//	@Param			Authorization			header		string	true	"Access token"
+//	@Param			id						path		uint	true	"Project ID"
+//	@Success		200						{string}	string
 //	@Failure		400						{string}	string
 //	@Failure		401						{string}	string
 //	@Failure		404						{string}	string
 //	@Failure		500						{string}	string
 //	@Router			/api/v1/project/{id}	[delete]
 func (ctrl *controller) delete(c *fiber.Ctx) error {
-	log.Println(c.Params("id"))
+	id, err := c.ParamsInt("id")
+	if err != nil {
+		log.Println("Error getting param 'id':", err)
+		return fiber.ErrBadRequest
+	}
 
-	return nil
+	err = ctrl.app.Delete(c.UserContext(), uint(id))
+	if err != nil {
+		log.Println("Error deleting project:", err)
+		return fiber.NewError(fiber.StatusInternalServerError, "Error deleting project")
+	}
+
+	return c.SendStatus(fiber.StatusOK)
 }
 
 func NewRoute(router fiber.Router) {
+	tm := persistent.NewTransactionManager(db.DB)
 	controller := &controller{
-		app: application.NewProjectApp(),
+		app: application.NewProjectApp(tm, nil, nil),
 	}
 
 	group := router.Group("/project")
 	group.Post("/", controller.create)
 	group.Get("/:user<min(1)>", controller.readByUser)
-	group.Get("/transactions/:id<min(1)>", controller.readTransactions)
+	group.Get("/logs/:id<min(1)>", controller.readLogs)
 	group.Delete("/:id<min(1)>", controller.delete)
 }
